Inversion de vertical et horizontal...

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,9 +18,9 @@ bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | x
 set-option -g mouse-select-pane on
 
 unbind %
-bind h split-window -h # horizontal split
+bind v split-window -h # horizontal split
 unbind '"'
-bind v split-window -v # vertical split
+bind h split-window -v # vertical split
 bind C-p previous-window
 bind C-n next-window
 
