--- a/tmux.conf
+++ b/tmux.conf
@@ -1,68 +1,108 @@
-set -g prefix C-a
-unbind-key C-b
-bind-key C-a send-prefix
-bind-key C-a last-window
+#~/.tmux.conf - tmux terminal multiplexer config
+# Based heavily on Thayer Williams' (http://cinderwick.ca)
 
-# copy mode to escape key
+# set prefix key to ctrl+t
+unbind C-b
+set -g prefix C-a
+
+# reload config without killing server
+bind r source-file ~/.tmux.conf
+
+# more intuitive keybindings for splitting
+unbind %
+bind h split-window -v
+unbind '"'
+bind v split-window -h
+
+# set vi keys
 unbind [
 bind Escape copy-mode
+setw -g mode-keys vi
 
-set-window-option -g mode-keys vi # vi key
-set-option -g status-keys vi
-set-window-option -g utf8 on # utf8 support
-set-window-option -g mode-mouse off # disable mouse
+# send the prefix to client inside window (ala nested sessions)
+bind-key a send-prefix
 
-# move tmux copy buffer into x clipboard
-bind-key C-y save-buffer /tmp/tmux-buffer \; run-shell "cat /tmp/tmux-buffer | xclip"
+# toggle last window like screen
+bind-key C-b last-window
 
-set-option -g mouse-select-pane on
+# confirm before killing a window or the server
+bind-key k confirm kill-window
+bind-key K confirm kill-server
 
-unbind %
-bind v split-window -h # horizontal split
-unbind '"'
-bind h split-window -v # vertical split
-bind C-p previous-window
-bind C-n next-window
+# toggle statusbar
+bind-key b set-option status
 
-# window title
-set-option -g set-titles on
-set-option -g set-titles-string '#P #W' # window number, program name, active (or not)
-set-window-option -g automatic-rename on # auto name
-
-# messages
-#set-window-option -g mode-bg magenta
-#set-window-option -g mode-fg black
-#set-option -g message-bg magenta
-#set-option -g message-fg black
-
-# No visual activity
-set -g visual-activity off
-set -g visual-bell on
-
-#next tab
+# ctrl+left/right cycles thru windows
 bind-key -n C-right next
-
-#previous tab
 bind-key -n C-left prev
 
-# status bar
-set-option -g status-utf8 on
-set-option -g status-justify right
-set-option -g status-bg black
-set-option -g status-fg cyan
-set-option -g status-interval 5
-set-option -g status-left-length 30
-set-option -g status-left '#[fg=magenta]» #[fg=blue,bold]#T#[default]'
-set-option -g status-right '#[fg=cyan]»» #[fg=blue,bold]###S #[fg=magenta]%R %m-%d#(acpi | cut -d ',' -f 2)#[default]'
-set-option -g visual-activity on
-set-window-option -g monitor-activity on
+# open a man page in new window
+bind m command-prompt "split-window 'exec man %%'"
+
+# quick view of processes
+bind '~' split-window "exec htop"
+
+# scrollback buffer n lines
+set -g history-limit 5000
+
+# listen for activity on all windows
+set -g bell-action any
+
+# on-screen time for display-panes in ms
+set -g display-panes-time 2000
+
+# start window indexing at one instead of zero
+set -g base-index 1
+
+# enable wm window titles
+set -g set-titles on
+
+# disable auto renaming
+# setw -g automatic-rename off
+
+# border colours
+set -g pane-active-border-bg default
+
+# wm window title string (uses statusbar variables)
+set -g set-titles-string "tmux:#I [ #W ]"
+
+# session initialization
+#new -s0 -nTTYtter 'ttytter'
+#neww -t0:1 -nvifm 'vifm'
+
+#selectw -t 1
+
+# statusbar --------------------------------------------------------------
+set -g status-interval 1
+set -g status-justify centre # center align window list
+set -g status-left-length 20
+set -g status-left '#[fg=green] #H #[fg=black,bright]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
+set -g status-right '#[fg=blue,bright]Up #(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=black,bright]• #[fg=magenta]#(cut -d " " -f 1-4 /proc/loadavg) '
+
+# default statusbar colors
+set -g status-fg white
+set -g status-bg default
+set -g status-attr bright
+
+# default window title colors
+set-window-option -g window-status-fg white
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
+
+# active window title colors
 set-window-option -g window-status-current-fg white
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
 
-# clock
-set-window-option -g clock-mode-colour cyan
-set-window-option -g clock-mode-style 24
+# command/message line colors
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
 
-set -g status-left '#H *#S*'
-set -g status-right '#(cut -d " " -f 1-4 /proc/loadavg) #%Y-%m-%d %H:%M:%S#[default]'
-
-bind-key u capture-pane \; save-buffer /tmp/tmux-buffer \; run-shell "$TERMINAL -e 'cat /tmp/tmux-buffer | urlview'"
+# show some useful stats but only when tmux is started
+# outside of Xorg, otherwise dwm statusbar shows these already
+#set -g status-right ""
+#set -g status-left ""
+#if '[ -z "$DISPLAY" ]' 'set -g status-left "[#[fg=green] #H #[default]]"'
+#if '[ -z "$DISPLAY" ]' 'set -g status-right "[ #[fg=magenta]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3)#[default] ][ #[fg=cyan,bright]%a %Y-%m-%d %H:%M #[default]]"'
+#if '[ -z "$DISPLAY" ]' 'set -g status-right-length 50'
