--- a/i3status.conf
+++ b/i3status.conf
@@ -15,30 +15,30 @@ order += "load"
 order += "time"
 
 wireless wlan0 {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+  format_up = "W: (%quality - %essid) %ip"
+  format_down = "W: no"
 }
 
 ethernet eth0 {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
+  # if you use %speed, i3status requires root privileges
+  format_up = "E: %ip (%speed)"
 	format_down = "E: down"
 }
 
 battery 1 {
-        format = "%status %percentage %remaining"
+  format = "%status %percentage %remaining"
 }
 
 run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
+  pidfile = "/var/run/dhclient*.pid"
 }
 
 run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
+  pidfile = "/var/run/vpnc/pid"
 }
 
 time {
-	format = "%Y-%m-%d %H:%M:%S"
+	format = "%d-%m-%Y %H:%M"
 }
 
 load {
