--- a/i3/config
+++ b/i3/config
@@ -118,7 +118,7 @@ bindsym $mod+Shift+R restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+E exit
 
-# modification du son : 
+# modification du son :
 bindsym XF86AudioLowerVolume exec amixer set Master playback 5-
 bindsym XF86AudioRaiseVolume exec amixer set Master playback 5+
 bindsym XF86AudioMute exec amixer set Master toggle
@@ -131,8 +131,31 @@ bindsym $mod+p exec cmus-remote -u
 bindsym $mod+n exec cmus-remote -n
 bindsym $mod+Shift+n exec cmus-remote -r
 
-bindsym $mod+Shift+S mode "resize"
+# LIGHT
+bindsym XF86MonBrightnessUp exec light.sh +
+bindsym XF86MonBrightnessDown exec light.sh -
 
+# To search for a a program by name:
+bindsym mod1+F1 exec python ~/workspace/perso/i3-wm-scripts/nextfind.py
+
+# To mark a window for jumping back to:
+bindsym mod1+F2 exec ~/workspace/perso/i3-wm-scripts/mark
+
+# To use dmenu to jump back to a particular program:
+bindsym mod1+F3 exec ~/workspace/perso/i3-wm-scripts/goto
+
+
+#focus / jump to a specific window
+#bindsym $mod+F1 [title="^mutt"] focus
+#bindsym $mod+F1 [class="(?i)thunderbird"] focus
+#bindsym $mod+F2 [title="irssi"] focus
+#bindsym $mod+w [class="(?i)Firefox"] focus
+#bindsym $mod+t [class="(?i)Thunderbird"] focus
+
+
+
+# RESIZE
+bindsym $mod+Shift+S mode "resize"
 # resize window (you can also use the mouse for that)
 mode "resize" {
 # These bindings trigger as soon as you enter the resize mode
@@ -171,32 +194,28 @@ mode "resize" {
   bindsym Escape mode "default"
 }
 
-#focus / jump to a specific window
-bindsym $mod+F1 [title="^mutt"] focus
-bindsym $mod+F2 [title="irssi"] focus
-bindsym $mod+w [class="(?i)Firefox"] focus
-#bindsym $mod+t [class="(?i)Thunderbird"] focus
-
-# assign
-assign [class="Navigator"] → 1
-#assign [class="Mail"] → 3
-
-
 # exec
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 #exec i3status | i3bar -dtop
 bar {
-  status_command i3Status55.sh
+  #status_command i3Status55.sh
+  status_command i3status
   mode dock
   position top
 
   colors {
     background #000000
     statusline #FFFFFF
-    urgent_workspace #FFFFFF #FF0000 
+    urgent_workspace #FFFFFF #FF0000
   }
 }
+
+# assign
+assign [class="Navigator"] → 1
+#assign [class="Mail"] → 3
+
+
 
 exec firefox
 #exec thunderbird
