--- a/i3status.conf
+++ b/i3status.conf
@@ -8,7 +8,7 @@ order = "disk /home"
 #order += "run_watch DHCP"
 #order += "run_watch VPN"
 order += "wireless wlan0"
-#order += "ethernet eth0"
+order += "ethernet eth1"
 order += "battery 1"
 order += "cpu_temperature 0"
 order += "load"
@@ -19,7 +19,7 @@ wireless wlan0 {
   format_down = "W: no"
 }
 
-ethernet eth0 {
+ethernet eth1 {
   # if you use %speed, i3status requires root privileges
   format_up = "E: %ip (%speed)"
 	format_down = "E: down"
