--- a/tmux.conf
+++ b/tmux.conf
@@ -42,6 +42,9 @@ bind m command-prompt "split-window 'exec man %%'"
 # quick view of processes
 bind '~' split-window "exec htop"
 
+# 256 colors
+set -g default-terminal "screen-256color"
+
 # scrollback buffer n lines
 set -g history-limit 5000
 
