--- a/tmux.conf
+++ b/tmux.conf
@@ -109,3 +109,10 @@ set -g message-attr bright
 #if '[ -z "$DISPLAY" ]' 'set -g status-left "[#[fg=green] #H #[default]]"'
 #if '[ -z "$DISPLAY" ]' 'set -g status-right "[ #[fg=magenta]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3)#[default] ][ #[fg=cyan,bright]%a %Y-%m-%d %H:%M #[default]]"'
 #if '[ -z "$DISPLAY" ]' 'set -g status-right-length 50'
+
+
+# MOUSE
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
